# breakout

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/GameElement/GameObject/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Paddle.cpp  Paddle.h  StrongBrick.cpp  StrongBrick.h
app/src/main/cpp/GameEngine/: Breakoutgame.cpp
app/src/main/java/com/example/breakoutgame/Data/: CollisionResponse.java
app/src/main/java/com/example/breakoutgame/GameElement/GameObject/: Ball.java  Brick.java  Paddle.java  StrongBrick.java
app/src/main/java/com/example/breakoutgame/GameElement/UI/: LevelEndScreen.java
app/src/main/java/com/example/breakoutgame/GameEngine/: BreakoutGame.java  BreakoutView.java  CollisionHandler.java
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
